unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Primary_OverTalk_Ratio__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Primary_OverTalk_Ratio__c</fullName>
    <description>The percentage of the call where both parties talked at the same time, and where the primary party began talking first (e.g. the primary party talked over the other party) expressed as a number from 0 to 1 with .01 resolution.</description>
    <label>Metric Primary OverTalk Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>