unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Primary_Talk_Rate_Ratio__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Primary_Talk_Rate_Ratio__c</fullName>
    <description>A measure of the primary party talk rate compared to the other talk rate, expressed as ratio.</description>
    <label>Metric Primary Talk Rate Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>