unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Primary_Talk_Ratio__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Primary_Talk_Ratio__c</fullName>
    <description>The percentage of non-silence time that the primary party was talking, expressed as a number from 0 to 1 with .01 resolution.</description>
    <label>Metric Primary Talk Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>