unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Primary_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Primary_Vocabulary__c</fullName>
    <description>Number of unique words spoken by the primary party</description>
    <label>Metric Primary Vocabulary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>