unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Primary_VoiceDynamism_StdDevScore__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Primary_VoiceDynamism_StdDevScore__c</fullName>
    <description>The measure of the standard deviation for all the primary party’s words in a transcription.</description>
    <label>Metric Primary VoiceDynamism StdDevScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>