unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Silence_Incidents__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Silence_Incidents__c</fullName>
    <description>The number of times that neither party were talking, where the duration was &gt;4 seconds, expressed as an integer from zero to n.</description>
    <label>Metric Silence Incidents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>