unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Silence_Ratio__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Silence_Ratio__c</fullName>
    <description>The percentage of time where neither parties were talking.</description>
    <label>Metric Silence Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>