unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Start_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Start_Sentiment__c</fullName>
    <description>A score that compares all of the sentence sentiment values for the first third of the total sentences for the transcript. The range is between -1 and 1 with -1 for very negative, 0 for neutral and 1 for very positive.</description>
    <label>Metric Start Sentiment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>