unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Natterbox_Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Natterbox_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>