unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Note_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Note_Count__c</fullName>
    <description>Number of notes on this Insight.</description>
    <label>Note Count Deprecated</label>
    <summaryForeignKey>nbavs__Insights_Notes__c.nbavs__Insights__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>