unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Notes_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Notes_Count__c</fullName>
    <label>Notes Count</label>
    <summaryForeignKey>nbavs__Insight_Note__c.nbavs__Insights__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>