unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Number__c</fullName>
    <label>Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>