unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Number_of_categories__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Number_of_categories__c</fullName>
    <description>Roll up summary field calculate number of categories fired in related to a call.</description>
    <label>Number of categories</label>
    <summaryForeignKey>nbavs__Insight_Category__c.nbavs__Insights__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>