unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Opened_Notes_Date__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Opened_Notes_Date__c</fullName>
    <description>Rollup summary field to capture most recent date of opened note</description>
    <label>Opened Notes Date</label>
    <summarizedField>nbavs__Insight_Note__c.nbavs__NoteLastModifiedDate__c</summarizedField>
    <summaryFilterItems>
        <field>nbavs__Insight_Note__c.nbavs__Is_Closed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>nbavs__Insight_Note__c.nbavs__Insights__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>