unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Other_Account__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Account__c</fullName>
    <formula>nbavs__Call_Reporting__r.nbavs__Other_Account__r.Name</formula>
    <inlineHelpText>Other leg recording related account</inlineHelpText>
    <label>Other Account</label>
    <type>Text</type>
</CustomField>