unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Other_Keywords__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Keywords__c</fullName>
    <label>Other Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>