unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Other_Lead__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Lead__c</fullName>
    <formula>nbavs__Call_Reporting__r.nbavs__Other_Lead__r.FirstName+&#39; &#39;+nbavs__Call_Reporting__r.nbavs__Other_Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Other leg recording related lead</inlineHelpText>
    <label>Other Lead</label>
    <type>Text</type>
</CustomField>