unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Other_Natterbox_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Natterbox_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insights (Other Natterbox User)</relationshipLabel>
    <relationshipName>Insights1</relationshipName>
    <type>Lookup</type>
</CustomField>