unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Other_Topics__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Topics__c</fullName>
    <label>Other Topics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>