unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__PlayerLinkValue_Search__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PlayerLinkValue_Search__c</fullName>
    <formula>IF(nbavs__Insight_Player_Text__c != null, nbavs__Insight_Player_Text__c, &quot;Processing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlayerLinkValue_Search</label>
    <type>Text</type>
</CustomField>