unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Record_Url__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Record_Url__c</fullName>
    <formula>&quot;/&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Url</label>
    <type>Text</type>
</CustomField>