unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Related_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Related_Group_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(nbavs__Natterbox_Group__c)),nbavs__Natterbox_Group__r.Name,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Group Name</label>
    <type>Text</type>
</CustomField>