unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Related_Group_Url__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Related_Group_Url__c</fullName>
    <formula>IF(NOT(ISBLANK(nbavs__Natterbox_Group__c)),&quot;/&quot;+nbavs__Natterbox_Group__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Group Url</label>
    <type>Text</type>
</CustomField>