unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Related_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Related_Name__c</fullName>
    <formula>if( nbavs__Account__c != null,  nbavs__Account__r.Name , 
   if(nbavs__Contact__c != null,  nbavs__Contact__r.FirstName + &#39; &#39; +  nbavs__Contact__r.LastName ,
      if(nbavs__Lead__c != null, nbavs__Lead__r.FirstName + &#39; &#39;+ nbavs__Lead__r.LastName,
         if( nbavs__Natterbox_User__c != null ,  nbavs__Natterbox_User__r.Name,
            if(nbavs__Natterbox_Group__c != null, nbavs__Natterbox_Group__r.Name,
               if( nbavs__Opportunity__c != null ,  nbavs__Opportunity__r.Account.Name, null ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Name</label>
    <type>Text</type>
</CustomField>