unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Related_Record_Id__c</fullName>
    <formula>if( nbavs__Account__c != null,&#39;/&#39;+nbavs__Account__c,
if(nbavs__Contact__c != null, &#39;/&#39;+nbavs__Contact__c,
if(nbavs__Lead__c != null, &#39;/&#39;+nbavs__Lead__c,
if( nbavs__Natterbox_User__c != null , &#39;/&#39;+nbavs__Natterbox_User__c,
if(nbavs__Natterbox_Group__c != null,&#39;/&#39;+ nbavs__Natterbox_Group__c,
if( nbavs__Opportunity__c != null ,&#39;/&#39;+ nbavs__Opportunity__c, null ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Id</label>
    <type>Text</type>
</CustomField>