unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Related_UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Related_UUID__c</fullName>
    <label>Related UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>