unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>