unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Status_CallFlow_Download__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Status_CallFlow_Download__c</fullName>
    <label>Status CallFlow Download</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>