unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Topics_Primary__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Topics_Primary__c</fullName>
    <description>A text field (length to be determined) into which the topics for the Primary channel will be added, e.g. “Solar Power,Artificial Intelligence,Government”</description>
    <label>Topics Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>