unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UUID__c</fullName>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>