unpackaged/main/default/objects/nbavs__Insights__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <columns>NAME</columns>
    <columns>nbavs__CallReporting_Relationship__c</columns>
    <columns>nbavs__Insights_Player__c</columns>
    <columns>nbavs__Call_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>nbavs__UUID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>